--- a/package.json
+++ b/package.json
@@ -42,6 +42,12 @@
     ]
   },
   "devDependencies": {
-    "@types/pixelmatch": "^5.2.2"
+    "@types/pixelmatch": "^5.2.2",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-only-warn": "^1.0.2",
+    "eslint-plugin-react": "^7.21.5",
+    "worker-loader": "^3.0.8"
   }
 }
