--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pixelmatch": "^5.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
